--- a/src/css/app.css
+++ b/src/css/app.css
@@ -5,3 +5,21 @@
 body, #root{
     min-height: 100vh;
 }
+
+*::-webkit-scrollbar {
+    width: 4px;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 4px;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+}
+
+*::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
