--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,30 +1,30 @@
-@tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-body, #root{
-    min-height: 100vh;
+body,
+#root {
+  min-height: 100vh;
 }
 
 *::-webkit-scrollbar {
-    width: 4px;
+  width: 4px;
 }
 
 *::-webkit-scrollbar-thumb {
-    background-color: #888;
-    border-radius: 4px;
+  background-color: #888;
+  border-radius: 4px;
 }
 
 *::-webkit-scrollbar-thumb:hover {
-    background-color: #555;
+  background-color: #555;
 }
 
 *::-webkit-scrollbar-track {
-    background-color: transparent;
+  background-color: transparent;
 }
 
-.ant-form-item-control-input-content{
-    display: flex;
-    gap:1em;
-    align-items: center;
+.ant-form-item-control-input-content {
+  display: flex;
+  gap: 1em;
+  align-items: center;
 }
